--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "coverage": "npm test -- --coverage --watchAll"
+    "coverage": "npm test -- --coverage --watchAll --collectCoverageFrom='/src/Components/**/*.{ts.tsx}' --collectCoverageFrom='!src/Components/**/*.{types,stories,spec}.{ts.tsx}'"
   },
   "eslintConfig": {
     "extends": [
